# Neotec-Thunder-POS

./: MANIFEST.in  README.md  README_SECTION1.md  hooks_snippet.txt  pyproject.toml  setup.py
neotec_fnb/: hooks.py  modules.txt
neotec_fnb/api/: thunder.py
neotec_fnb/neotec_fnb_core/doctype/neotec_check/: neotec_check.json  neotec_check.py
neotec_fnb/neotec_fnb_core/doctype/neotec_check_item/: neotec_check_item.json
neotec_fnb/neotec_fnb_core/doctype/neotec_floor/: neotec_floor.py
neotec_fnb/neotec_fnb_core/doctype/neotec_kds_ticket_item/: neotec_kds_ticket_item.py
neotec_fnb/neotec_fnb_core/doctype/neotec_loyalty_program/: neotec_loyalty_program.json  neotec_loyalty_program.py
neotec_fnb/neotec_fnb_core/doctype/neotec_offer/: neotec_offer.json
neotec_fnb/neotec_fnb_core/doctype/neotec_outlet/: neotec_outlet.json  neotec_outlet.py
neotec_fnb/neotec_fnb_core/doctype/neotec_pos_profile/: neotec_pos_profile.py
neotec_fnb/neotec_fnb_core/doctype/neotec_shared_allocation/: neotec_shared_allocation.json  neotec_shared_allocation.py
neotec_fnb/neotec_fnb_core/doctype/neotec_table/: neotec_table.py
neotec_fnb/neotec_fnb_core/doctype/neotec_thunder_settings/: neotec_thunder_settings.py
neotec_fnb/www/neotec-docs/: index.html  technical.html
neotec_thunder_pos/: hooks.py
neotec_thunder_pos/page/thunder_pos_setup/: thunder_pos_setup.js  thunder_pos_setup.json  thunder_pos_setup.py
neotec_thunder_pos/www/neotec-docs/: user-manual.html
scripts/: update_thunder_settings_single.py
(+24 files in other folders)
